# packetlab

./: .gitignore  CMakeLists.txt  README.md
assets/: demo-project.json
scripts/: build.sh  run.sh  test.sh
src/app/: consolelineedit.cpp  consolelineedit.h  deviceconsoledialog.cpp  deviceconsoledialog.h  main.cpp  mainwindow.cpp  mainwindow.h  simulationdialog.cpp  simulationdialog.h  topologyscene.cpp  topologyscene.h
src/core/: device.cpp  device.h  link.cpp  link.h  networkinterface.cpp  networkinterface.h  networkmodel.cpp  networkmodel.h  projectserializer.cpp  projectserializer.h  simulator.cpp  simulator.h
